--- a/css/styles.css
+++ b/css/styles.css
@@ -1,16 +1,32 @@
-li {
-  list-style-type: none;
-  color: #e40007;
+.background {
+  background-color: #000;
 }
-
-@media screen and (min-width: 300px) {
-  .col-md-3 {
-    background-color: blue;
-  }
+.container-fluid {
+  background-color: #ffff00;
+  height: 800px;
 }
-
-@media screen and (min-width: 500px) {
-  .col-md-3 {
-    background-color: purple;
-  }
+.header {
+  background-color: #0000ff;
+  height: 100px;
+  margin-top: 100px;
+}
+.nav {
+  background-color: #005f00;
+  height: 50px;
+}
+.content {
+  background-color: #ff0000;
+  height: 150px;
+}
+.aside {
+  background-color: #76c7ff;
+  height: 150px;
+}
+.promo1, .promo2, .promo3, .promo4 {
+  background-color: #ff5300;
+  height: 100px;
+}
+.footer {
+  background-color: #000;
+  height: 70px;
 }
